--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "test:unit": "jest --testPathPattern=.service --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
@@ -77,6 +78,16 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+    "/node_modules/",
+    ".controller.ts",
+    ".module.ts",
+    "app.service.ts",
+    "main.ts",
+    "jwt.strategy.ts",
+    "jwt-auth.guard.ts",
+    ".entity.ts"
+    ]
   }
 }
