--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Escanear frontend
-        uses: SonarSource/sonarcloud-github-action@master
+        uses: warchant/setup-sonar-scanner@v7
         with:
           args: >
             -Dsonar.projectKey=app-front-raulhr
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Escanear backend
-        uses: SonarSource/sonarcloud-github-action@master
+        uses: warchant/setup-sonar-scanner@v7
         with:
           args: >
             -Dsonar.projectKey=app-back-raulhr
