arreglado paso de sonar

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,12 @@ jobs:
         run: npm test -- --coverage
         working-directory: backend
 
+      - name: Guardar cobertura backend
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-coverage
+          path: backend/coverage
+
       - name: Instalando dependencias de frontend
         run: npm ci
         working-directory: frontend
@@ -43,10 +49,25 @@ jobs:
         run: npm test -- --coverage
         working-directory: frontend
 
+      - name: Guardar cobertura frontend
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-coverage
+          path: frontend/coverage
+
   analisis-frontend:
     needs: test-y-analisis
     runs-on: ubuntu-latest
     steps:
+      - name: Clonando repositorio
+        uses: actions/checkout@v3
+
+      - name: Descargar cobertura frontend
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-coverage
+          path: frontend/coverage
+
       - name: Escanear frontend
         uses: SonarSource/sonarcloud-github-action@master
         with:
@@ -65,6 +86,15 @@ jobs:
     needs: test-y-analisis
     runs-on: ubuntu-latest
     steps:
+      - name: Clonando repositorio
+        uses: actions/checkout@v3
+        
+      - name: Descargar cobertura backend
+        uses: actions/download-artifact@v4
+        with:
+          name: backend-coverage
+          path: backend/coverage
+
       - name: Escanear backend
         uses: SonarSource/sonarcloud-github-action@master
         with:
