--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,7 @@ jobs:
         with:
           projectBaseDir: frontend
           args: >
+            -Dsonar.projectKey=app-front-raulhr
             -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
             -Dsonar.login=${{ env.SONAR_TOKEN }}
         
@@ -91,7 +92,7 @@ jobs:
     steps:
       - name: Clonando repositorio
         uses: actions/checkout@v3
-
+        
       - name: Descargar cobertura backend
         uses: actions/download-artifact@v4
         with:
@@ -103,6 +104,7 @@ jobs:
         with:
           projectBaseDir: backend
           args: >
+            -Dsonar.projectKey=app-back-raulhr
             -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
             -Dsonar.login=${{ env.SONAR_TOKEN }}
 
@@ -137,4 +139,5 @@ jobs:
         run: |
           docker build -t $FRONTEND_IMAGE:$GITHUB_RUN_NUMBER ./frontend
           docker push $FRONTEND_IMAGE:$GITHUB_RUN_NUMBER
+
 
