fixed sonar coverage

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,14 +72,15 @@ jobs:
           name: frontend-coverage
           path: frontend/coverage
 
-      - name: Escanear frontend
-        uses: SonarSource/sonarcloud-github-action@master
+      - name: Run SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v5.0.0
         with:
-          projectBaseDir: frontend
           args: >
             -Dsonar.projectKey=app-front-raulhr
-            -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
-            -Dsonar.login=${{ env.SONAR_TOKEN }}
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.projectBaseDir=frontend
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
         
       - name: Esperar quality gate frontend
         uses: warchant/setup-sonar-scanner@v7
@@ -99,14 +100,16 @@ jobs:
           name: backend-coverage
           path: backend/coverage
 
-      - name: Escanear backend
-        uses: SonarSource/sonarcloud-github-action@master
+      - name: Escaneando el backend
+        uses: SonarSource/sonarqube-scan-action@v5.0.0
         with:
-          projectBaseDir: backend
           args: >
             -Dsonar.projectKey=app-back-raulhr
-            -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
-            -Dsonar.login=${{ env.SONAR_TOKEN }}
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.projectBaseDir=backend
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+
 
       - name: Esperar quality gate backend
         uses: warchant/setup-sonar-scanner@v7
