--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,13 +72,13 @@ jobs:
           name: frontend-coverage
           path: frontend/coverage
 
-      - name: Run SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v5.0.0
+      - name: Escanear frontend
+        uses: SonarSource/sonarcloud-github-action@master
         with:
           args: >
             -Dsonar.projectKey=app-front-raulhr
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
+            -Dsonar.token=${{ env.SONAR_TOKEN }}
             -Dsonar.projectBaseDir=frontend
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
         
@@ -101,12 +101,12 @@ jobs:
           path: backend/coverage
 
       - name: Escaneando el backend
-        uses: SonarSource/sonarqube-scan-action@v5.0.0
+        uses: SonarSource/sonarcloud-github-action@master
         with:
           args: >
             -Dsonar.projectKey=app-back-raulhr
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
+            -Dsonar.token=${{ env.SONAR_TOKEN }}
             -Dsonar.projectBaseDir=backend
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
