fixed coverage exceptions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,11 +76,11 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@master
         with:
           args: >
-            -Dsonar.projectKey=app-front-raulhr
+#            -Dsonar.projectKey=app-front-raulhr
             -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
             -Dsonar.token=${{ env.SONAR_TOKEN }}
             -Dsonar.projectBaseDir=frontend
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+#            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
         
       - name: Esperar quality gate frontend
         uses: warchant/setup-sonar-scanner@v7
@@ -104,11 +104,11 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@master
         with:
           args: >
-            -Dsonar.projectKey=app-back-raulhr
+#            -Dsonar.projectKey=app-back-raulhr
             -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
             -Dsonar.token=${{ env.SONAR_TOKEN }}
             -Dsonar.projectBaseDir=backend
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+#            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 
       - name: Esperar quality gate backend
