fixed coverage exceptions

--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=app-front-raulhr
-sonar.sources=src
-sonar.tests=src
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=**/*.test.jsx,src/index.js,src/reportWebVitals.js,babel.config.js
+sonar.sources=src
+sonar.tests=src/**/*.test.jsx
+sonar.coverage.exclusions=src/**/*.test.jsx,src/reportWebVitals.js,src/index.js,babel.config.js
