--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=app-back-raulhr
-sonar.sources=src
-sonar.tests=src
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.sources=src
+sonar.tests=test
 sonar.coverage.exclusions=test/**,src/**/*.spec.ts,src/main.ts,src/app.controller.ts,src/app.service.ts,src/auth/jwt.strategy.ts,src/vote/vote.controller.ts,src/auth/auth.controller.ts
