fixed coverage exceptions

--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=app-front-raulhr
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.sources=src
-sonar.tests=src/**/*.test.jsx
+sonar.tests=src
 sonar.coverage.exclusions=src/**/*.test.jsx,src/reportWebVitals.js,src/index.js,babel.config.js
+sonar.test.inclusions=src/**/*.test.jsx
