--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,9 @@
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.24"
+    "typeorm": "^0.3.24",
+    "@willsoto/nestjs-prometheus": "^5.0.0",
+    "prom-client": "^14.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
