--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       - ./database:/var/lib/postgresql/data
 
   backend:
-    image: raulhr16/backend:12
+    build:
+      context: ./backend
     container_name: backend-app
     restart: always
     depends_on:
@@ -28,7 +29,8 @@ services:
       - "3000:3000"
 
   frontend:
-    image: raulhr16/frontend:12
+    build:
+      context: ./frontend
     container_name: frontend-app
     restart: always
     depends_on:
